# comp_math

./: README.md
comp-math1/: MatrixWithGauss.cpp  aboba2.txt  main.cpp
comp-math2/: CMakeLists.txt  CompMethodAbstr.h  main.cpp
comp-math2/bisection/: BisectionMethod.cpp  BisectionMethodImpl.h
comp-math2/iterations/: IterationMethod.cpp  IterationMethod.h
comp-math2/secant/: SecantMethod.cpp  SecantMethod.h
comp-math2/util/: AnsStruct.h  DoubleComparator.h
comp-math3/: CMakeLists.txt  main.cpp
comp-math3/trapezoid/: TrapezoidMethod.cpp  TrapezoidMethod.h
comp-math4/: CMakeLists.txt  NewtonMethod.cpp  NewtonMethod.h  main.cpp  matplotlib.h
comp-math5/: CMakeLists.txt  MilneMethod.cpp  MilneMethod.h  main.cpp
